--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,7 +124,13 @@
   <data name="gnome_media_floppy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gnome_media_floppy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="vpn-rev-encryption" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="encryption" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vpn-rev-encryption.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stock_lock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stock_lock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stock_lock_open" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stock_lock_open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
